Fixed About spacing. Added fluidElement.js for fluid property calculations. Updated BrandQuilt to use fluidElement.js. Added Guide component for layout lines. Updated styles for consistency.

--- a/src/components/sections/About/styles.scss
+++ b/src/components/sections/About/styles.scss
@@ -3,7 +3,12 @@
 .about__content {
   @include fluid-property($breaks-md, $breaks-xl, 40px, 60px, gap);
   @include fluid-property($breaks-md, $breaks-xl, 40px, 100px, padding-top);
+  @include fluid-property($breaks-md, $breaks-xl, 30px, 60px, padding-left);
   @include fluid-property($breaks-md, $breaks-xl, 40px, 100px, padding-bottom);
+  @include fluid-property($breaks-md, $breaks-xl, 30px, 60px, padding-right);
+
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .about__description {
